finished a jQuery tabbed menu bar

--- a/part1.html
+++ b/part1.html
@@ -11,7 +11,7 @@
     <script src="js/html5shiv.min.js"></script>
 <![end if]-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script> <!-- j.query library -->
-<link href="css/main.css" type="text/css" rel="stylesheet" />
+<link href="css/general_style.css" type="text/css" rel="stylesheet" />
 </head>
 
     
