--- a/part2_slideshow.html
+++ b/part2_slideshow.html
@@ -40,7 +40,7 @@ $(function(){
 
     
 </script>
-<link href="css/main.css" type="text/css" rel="stylesheet" />
+<link href="css/general_style.css" type="text/css" rel="stylesheet" />
 </head>
     
 <body>
